fix: add profile occupation text overflow

--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -6,6 +6,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 400px;
 }
 
 @media screen and (max-width: 820px) and (min-width: 320px) {
